[metadata]
name = llm_visualizer
version = 0.0.1
description = visualize tools for large language models

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    torch
    gradio
    transformers==4.34.0
    retrying
    loguru
    sentencepiece
    openai>=1.0
    python-dotenv

[flake8]
max-line-length = 100
max-complexity = 18
exclude = __init__.py

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
