[metadata]
name = llm_visualizer
version = 0.0.1
description = visualize tools for large language models
author = Feng Wang
author_email = wangfeng19950315@163.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FateScript/llm_visualizer

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    torch
    gradio
    transformers==4.34.0
    retrying
    loguru
    sentencepiece
    openai>=1.0
    python-dotenv

[flake8]
max-line-length = 100
max-complexity = 18
exclude = __init__.py

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
known_thirdparty = numpy, loguru, gradio, torch, openai, transformers, retrying, sentencepiece, python-dotenv
KNOWN_MYSELF = llm_visualizer
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,MYSELF,LOCALFOLDER
no_lines_before=STDLIB
default_section = FIRSTPARTY
